--- a/src/styles/sections/_benefits.scss
+++ b/src/styles/sections/_benefits.scss
@@ -4,6 +4,7 @@
   min-height: 730px;
   background-image: url('../assets/images/bg/benefits-bg.svg');
   background-repeat: no-repeat;
+  background-size: cover;
 
   &__title {
     display: block;
