--- a/src/styles/sections/_generator.scss
+++ b/src/styles/sections/_generator.scss
@@ -4,6 +4,7 @@
                     url('../assets/images/bg/generator-bg-gradient.svg');
   background-repeat: no-repeat, no-repeat;
   background-position-y: 59%, 100%;
+  background-size: contain, contain;
 
   &__image-container {
     margin-block-start: 4.375em;
