--- a/src/styles/sections/_scanner.scss
+++ b/src/styles/sections/_scanner.scss
@@ -3,6 +3,7 @@
   margin-block-end: 9em;
   background-image: url('../assets/images/bg/scanner-bg.png');
   background-repeat: no-repeat;
+  background-size: contain;
 
   &__images {
     margin-block-start: 4.375em;
